# flux-core

./: CHARTER.md  Cargo.toml  DOCKSIDE-EXAM.md  README.md
benches/: vm_benchmark.rs
flux-core/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
flux-core/benches/: vm_bench.rs
flux-core/src/: error.rs  lib.rs
flux-core/src/a2a/: messages.rs  mod.rs
flux-core/src/bytecode/: decoder.rs  encoder.rs  mod.rs  opcodes.rs
flux-core/src/vm/: interpreter.rs  memory.rs  mod.rs  registers.rs
flux-core/tests/: test_a2a.rs  test_assembler.rs  test_vm.rs
for-fleet/: health-check-2026-04-12_171723.json
src/: error.rs  lib.rs
src/a2a/: messages.rs  mod.rs  swarm.rs
src/bytecode/: assembler.rs  disassembler.rs  mod.rs  opcodes.rs
src/vm/: interpreter.rs  mod.rs  registers.rs
src/vocabulary/: interpreter.rs  mod.rs
tests/: test_a2a.rs  test_assembler.rs  test_vm.rs  vocabulary_tests.rs
