[package]
name = "flux-core"
version = "0.1.0"
edition = "2021"
authors = ["FLUX Project Contributors"]
description = "FLUX Virtual Machine runtime - A bytecode VM with A2A protocol support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/flux-project/flux-core"
keywords = ["vm", "bytecode", "interpreter", "a2a", "flux"]
categories = ["no-std", "emulators", "parser-implementations"]
readme = "README.md"

[features]
default = ["std"]
std = []
alloc = []

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "vm_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[lib]
name = "flux_core"
path = "src/lib.rs"
